# embed

./: .gitignore  .gitmodules  LICENSE  README.md
implementation/gcc-plugin/: CMakeLists.txt  embed_plugin.cpp
implementation/plugins/: .clang-format  CMakeLists.txt  api.hpp  feature_test.hpp  help.hpp  options.cpp  options.hpp  version.hpp
implementation/plugins/gcc/: CMakeLists.txt  gimple_pass.cpp  gimple_pass.hpp  plugin.cpp
informal/: discussion.md  voting.md
informal/poc/: embed  embed_test.cpp  embedded
papers/: P1040 - embed.html  d1040 - embed.html
papers/published/: p1040r0 - embed.bs  p1040r1 - embed.bs  p1040r1 - embed.html
papers/source/: P1040 - embed.bs  d1040 - embed.bs
papers/source/prior_art/ld/: ld_data  ld_data_main.cpp
papers/source/prior_art/raw_include/: raw_include_data.h  raw_include_main.cpp
papers/source/prior_art/xxd/: xxd_data  xxd_data.h  xxd_data_main.cpp
